@@ -11,7 +11,7 @@
 #include <string.h>
 
 static int
-create_index(RDB_recmap *rmp, const char *name, const char *filename,
+new_index(RDB_recmap *rmp, const char *name, const char *filename,
         RDB_environment *envp, int fieldc, const int fieldv[],
         RDB_index **ixpp)
 {
@@ -49,6 +49,7 @@ create_index(RDB_recmap *rmp, const char *name, const char *filename,
     }
     for (i = 0; i < fieldc; i++)
         ixp->fieldv[i] = fieldv[i];
+    ixp->cmpv = 0;
 
     ret = db_create(&ixp->dbp, envp->envp, 0);
     if (ret != 0) {
@@ -96,17 +97,125 @@ make_skey(DB *dbp, const DBT *pkeyp, const DBT *pdatap, DBT *skeyp)
     return ret;
 }
 
+/*
+ * Read field from an index DBT
+ */
+static int
+get_field(RDB_index *ixp, int fi, void *datap, size_t len, size_t *lenp,
+              int *vposp)
+{
+    int i, vpos;
+    int offs = 0;
+    RDB_byte *databp = (RDB_byte *) datap;
+    int fno = ixp->fieldv[fi];
+
+    /*
+     * compute offset and length for key
+     */
+    if (ixp->rmp->fieldlens[fno] != RDB_VARIABLE_LEN) {
+        /* Offset is sum of lengths of previous fields */
+        for (i = 0; i < fi; i++) {
+            if (ixp->rmp->fieldlens[ixp->fieldv[i]] != RDB_VARIABLE_LEN) {
+                offs += ixp->rmp->fieldlens[ixp->fieldv[i]];
+            }
+        }
+
+        *lenp = (size_t) ixp->rmp->fieldlens[fno];
+    } else {
+        /*
+         * Offset is sum of lengths of fixed-length fields
+         * plus lengths of previous variable-length fields 
+         */
+        int vfcnt = 0;
+        for (i = 0; i < ixp->fieldc; i++) {
+            if (ixp->rmp->fieldlens[ixp->fieldv[i]] == RDB_VARIABLE_LEN)
+                vfcnt++;
+        }
+         
+        vpos = 0;
+        for (i = 0; i < fi; i++) {
+            if (ixp->rmp->fieldlens[ixp->fieldv[i]] != RDB_VARIABLE_LEN) {
+                offs += ixp->rmp->fieldlens[i];
+            } else {
+                offs += _RDB_get_vflen(databp, len, vfcnt, vpos++);
+            }
+        }
+        *lenp = _RDB_get_vflen(databp, len, vfcnt, vpos);
+    }
+    if (vposp != NULL)
+        *vposp = vpos;
+    return offs;
+}
+
+static int
+compare_key(DB *dbp, const DBT *dbt1p, const DBT *dbt2p)
+{
+    int i;
+    RDB_index *ixp = (RDB_index *) dbp->app_private;
+
+    for (i = 0; i < ixp->fieldc; i++) {
+        int offs1, offs2;
+        size_t len1, len2;
+        void *data1p, *data2p;
+        int res;
+
+        offs1 = get_field(ixp, i, dbt1p->data, dbt1p->size, &len1, NULL);
+        offs2 = get_field(ixp, i, dbt2p->data, dbt2p->size, &len2, NULL);
+        data1p = ((RDB_byte *) dbt1p->data) + offs1;
+        data2p = ((RDB_byte *) dbt2p->data) + offs2;
+
+        /* Compare fields */
+        if (ixp->cmpv[i].comparep != NULL) {
+            /* Comparison function is available, so call it */
+            res = (*ixp->cmpv[i].comparep)(data1p, len1, data2p, len2,
+                    ixp->cmpv[i].arg);
+        } else {
+            /* Compare memory */
+            res = memcmp(data1p, data2p, len1 < len2 ? len1 : len2);
+            if (res == 0)
+                res = len1 - len2;
+        }
+
+        /* If the fields are different, we're done */
+        if (res != 0) {
+            /* If order is descending, revert result */
+            if (!ixp->cmpv[i].asc)
+                res = -res;
+            return res;
+        }
+    }
+    /* All fields equal */
+    return 0;
+}
+
 int
 RDB_create_index(RDB_recmap *rmp, const char *namp, const char *filenamp,
         RDB_environment *envp, int fieldc, const int fieldv[],
-        int flags, DB_TXN *txid, RDB_index **ixpp)
+        const RDB_compare_field cmpv[], int flags, DB_TXN *txid,
+        RDB_index **ixpp)
 {
     RDB_index *ixp;
     int ret;
+    int i;
    
-    ret = create_index(rmp, namp, filenamp, envp, fieldc, fieldv, &ixp);
+    ret = new_index(rmp, namp, filenamp, envp, fieldc, fieldv, &ixp);
     if (ret != RDB_OK)
         return ret;
+
+    if (cmpv != NULL) {
+        ixp->cmpv = malloc(sizeof (RDB_compare_field) * fieldc);
+        if (ixp->cmpv == NULL)
+            goto error;
+        for (i = 0; i < fieldc; i++) {
+            ixp->cmpv[i].comparep = cmpv[i].comparep;
+            ixp->cmpv[i].arg = cmpv[i].arg;
+            ixp->cmpv[i].asc = cmpv[i].asc;
+        }
+
+        /* Set comparison function */
+        ixp->dbp->app_private = ixp;
+        ixp->dbp->set_bt_compare(ixp->dbp, &compare_key);
+    }
 
     /* Allow duplicates, if requested by the caller */
     if (!(RDB_UNIQUE & flags))
@@ -146,7 +255,7 @@ RDB_open_index(RDB_recmap *rmp, const char *namp, const char *filenamp,
     RDB_index *ixp;
     int ret;
 
-    ret = create_index(rmp, namp, filenamp, envp, fieldc, fieldv, &ixp);
+    ret = new_index(rmp, namp, filenamp, envp, fieldc, fieldv, &ixp);
     if (ret != RDB_OK)
         return RDB_convert_err(ret);
 
@@ -170,7 +279,6 @@ RDB_open_index(RDB_recmap *rmp, const char *namp, const char *filenamp,
     }
 
     *ixpp = ixp;
-
 
     return RDB_OK;
 error:
@@ -213,6 +321,7 @@ cleanup:
     free(ixp->namp);
     free(ixp->filenamp);
     free(ixp->fieldv);
+    free(ixp->cmpv);
     free(ixp);
     if (ret != 0)
         RDB_errmsg(envp, "cannot delete index: %s", RDB_strerror(ret));
