@@ -10,11 +10,6 @@
 
 #include "recmap.h"
 
-enum {
-    RDB_UNIQUE = 1,
-    RDB_ORDERED = 2
-};
-
 /*
  * Secondary index.
  */
@@ -26,12 +21,14 @@ typedef struct RDB_index {
     char *filenamp;
     int fieldc;
     int *fieldv;
+    /* For ordered indexes */
+    RDB_compare_field *cmpv;
 } RDB_index;
 
 int
 RDB_create_index(RDB_recmap *, const char *namp, const char *filenamp,
         RDB_environment *dsp, int fieldc, const int fieldv[],
-        int flags, DB_TXN *, RDB_index **);
+        const RDB_compare_field cmpv[], int flags, DB_TXN *, RDB_index **);
 
 int
 RDB_open_index(RDB_recmap *, const char *namp, const char *filenamp,
